# Learning-Pathway-Agent

./: README.md  pyproject.toml
src/learning_pathway_agent/: crew.py  main.py
src/learning_pathway_agent/api/: main.py
src/learning_pathway_agent/config/: agents.yaml  tasks.yaml
src/learning_pathway_agent/data/: role_catalog.py
src/learning_pathway_agent/services/: mcp_client.py  mcp_router.py
src/learning_pathway_agent/tools/: mcp_tools.py
src/learning_pathway_agent/ui/: streamlit_app.py
