[project]
name = "learning_pathway_agent"
version = "0.1.0"
description = "learning_pathway_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,litellm,tools]==1.14.7",
]

[project.scripts]
learning_pathway_agent = "learning_pathway_agent.main:run"
run_crew = "learning_pathway_agent.main:run"
train = "learning_pathway_agent.main:train"
replay = "learning_pathway_agent.main:replay"
test = "learning_pathway_agent.main:test"
run_with_trigger = "learning_pathway_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
